--- a/src/mailer/templates/confirmation.hbs
+++ b/src/mailer/templates/confirmation.hbs
@@ -6,8 +6,7 @@
     <p>
       Click
       <b><a href='{{link}}' target='_blank'>here</a></b>
-      to activate your acount or go to this link:
-      {{link}}
+      to activate your account
     </p>
     <p><small>This link will expire in an hour.</small></p>
     <br />
